--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
-    "start": "NODE_ENV=staging nodemon index",
-    "production": "NODE_ENV=production nodemon index"
+    "start": "SET NODE_ENV=staging & nodemon index",
+    "production": "SET NODE_ENV=production & nodemon index"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "eslint": "8.2.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3"
   }
